# RDT-core

./: README.md
1_RobotControl_main/: Adapter_RobotController.cpp  Adapter_RobotController.h  CMakeLists.txt  Mock_Adapter.cpp  Mock_Adapter.h  Panel_JogControl.cpp  Panel_JogControl.h  Panel_RobotView3D.cpp  Panel_RobotView3D.h  Panel_StateDisplay.cpp  Panel_StateDisplay.h  Panel_StatusBar.cpp  Panel_StatusBar.h  Panel_Teach.cpp  Panel_Teach.h  RDT_Qt_MetaTypes.h  RobotControl_main.cpp  draw_primitives.cpp  panel_jogcontrol_main.cpp  panel_robotview3d_main.cpp  panel_statedisplay_main.cpp  panel_statusbar_main.cpp  panel_teach_main.cpp
1_RobotControl_main/kuka_iisy11_r1300/: Kuka LBR iisy 11 R1300_A1.stp  Kuka LBR iisy 11 R1300_A3.stp  Kuka LBR iisy 11 R1300_A4.stp  Kuka LBR iisy 11 R1300_A5.stp
data_types_rdt/: CMakeLists.txt  DataTypes.cpp  DataTypes.h  Doxygen.in  MotionTypesSerializer.h  RobotConfig.h  Units.h  data_types_main.cpp
install_env/: README  bootstrap_all.sh  install_eigen.sh  install_igh_ethercat.sh  install_kdl.sh  install_occt.sh  install_prereqs.sh  install_qt6.sh  install_tinyxml2.sh  test.sh  test2.sh  verify_all.sh  versions.env
interpolator_nrt/: CMakeLists.txt  KdlKinematicSolver_mock.h  MotionProfile.cpp  MotionProfile.h  TrajectoryInterpolator.cpp  TrajectoryInterpolator.h  interpolator_main.cpp
kinematic_solver_nrt/: CMakeLists.txt  Doxygen.in  KdlKinematicSolver.cpp  KdlKinematicSolver.h  KinematicModel.cpp  KinematicModel.h  KinematicSolver.h  kinematic_solver_main.cpp
logger/: CMakeLists.txt  Logger.h  logger_main.cpp
motion_interface_hal/: CMakeLists.txt  Doxygen.in  EthercatInterface.cpp  EthercatInterface.h  FakeMotionInterface.cpp  FakeMotionInterface.h  IHardwareInterface.h  IMotionInterfaces.h  ITransport.h  IhardwareInterface.cpp  InternalSimulation.cpp  InternalSimulation.h  MasterHardwareInterface.cpp  MasterHardwareInterface.h  UDPMotionInterface.cpp  UDPMotionInterface.h  UDPTransport.cpp  UDPTransport.h  UdpInterface.cpp  UdpInterface.h  UdpPeer.hpp  motion_interface_main.cpp  robot_utility.py
motion_interface_hal/ethercat/: AxisConfiguration.h  CiA402.h  EthercatAxis.cpp  EthercatAxis.h  EthercatInterface.cpp  EthercatInterface.h  ethercat_axis_test_main.cpp
motion_manager_rt/: CMakeLists.txt  MotionManager.cpp  MotionManager.h  motion_manager_main.cpp
robot_controller_nrt/: CMakeLists.txt  RobotController.cpp  RobotController.h  robot_controller_main.cpp  Ниже — точно сформулированные правила, к.ini
spatial_math_/: CMakeLists.txt  FrameTransformer.h  frame_transformer_main.cpp
state_data_nrt/: CMakeLists.txt  StateData.h  state_data_main.cpp
trajectory_planner_nrt/: CMakeLists.txt  TrajectoryPlanner.cpp  TrajectoryPlanner.h  trajectory_planner_main.cpp
trajectory_queue_lf/: TrajectoryQueue.h
